hphp/test/zend/good/ext/bcmath/tests/bccomp_variation001.php
<?php
echo bccomp("2.2", "2.2", "2")."\n";
echo bccomp("2.32", "2.2", "2")."\n";
echo bccomp("2.29", "2.3", "2");
?>