hphp/test/zend/bad/ext/standard/tests/strings/htmlentities13.php
<?php
	print ini_get('default_charset')."\n";
	var_dump(htmlentities("\xa1\xa2\xa1\xa3\xa1\xa4", ENT_QUOTES, ''));
?>